[project]
name = "bullish-detector"
version = "0.1.0"
description = ""
authors = [
    {name = "gsaujla",email = "g.s.aujla@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest (>=8.3.4,<9.0.0)",
    "pre-commit (>=4.1.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
